# gv-api

./: .env.example  .gitignore  .golangci.yml  .mockery.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  coverage.out  docker-compose.test.yaml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml  sqlc.yaml
.gitea/workflows/: deploy.yaml  deploy.yml
alembic/: env.py
alembic/versions/: 000_habits_tables.py  001_make_frequency_non_nullable.py  002_add_big_step_small_step.py  003_replace_is_required_with_default_value.py  004_add_task_models.py  12e38b68e665_seed_data.py  7c30063cf758_.py  999_seed_data.py  dbb8772805a1_habits_tables.py
app/: config.py  database.py  dependencies.py  logging.py  main.py
app/agentai/: __init__.py  actions.py  prompt.txt  router.py  service.py
app/common/: __init__.py  constants.py  enums.py  repository.py  schemas.py  validations.py
app/core/: __init__.py  auth.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
app/habits/: __init__.py  constants.py  dependencies.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py  validations.py
app/health/: __init__.py  router.py
app/routers/: __init__.py  health.py
app/tasks/: enums.py  models.py  schemas.py
cmd/api/: main.go
db/: demo.sql
db/migrations/: 001_habits.sql  001_habits.up.sql  002_tasks.sql  002_tasks.up.sql  003_timestamptz.down.sql  003_timestamptz.up.sql  004_habit_objectives.up.sql  005_habit_targets.up.sql  006_tasks_dependencies.up.sql  007_name_length_limit.up.sql  008_unique_active_time_entry.up.sql  009_task_type.up.sql  010_task_priority.up.sql  011_task_dependency_cycle_check.up.sql  012_habit_streak_function.up.sql  013_task_dependencies_depends_on_index.up.sql  014_weed_varieties.up.sql  015_weed_varieties_audit.up.sql  016_finance.up.sql  017_finance_categories.up.sql  018_drop_currency.up.sql  (+1 more)
doc/: habit.md  improvements.md
docs/: api.md  architecture.md  test-suite-rebalance.md  test.md
ollama/: qwen3-fast.Modelfile
scripts/: auth.py  coverage.py
tests/: conftest.py  factories.py  test_daily_progress.py  test_e2e.py  test_habit_stats.py  test_health.py  test_log_crud.py  test_streak.py
(+126 files in other folders)
